# chevel-rocket

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  index.html  main.cpp  run-chevel-rocket.bat  styles.css
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  ASSETS_GUIDE.md  BUILD_WINDOWS.md  CHEVEL_AI_INTEGRATION.md  CHEVEL_ROCKET_CORE.md  COGNITIVE_UPGRADE_ROADMAP.md  COMMAND_INTERFACE.md  HARDWARE_BRIDGE.md  HARDWARE_PROTOCOL.md  PRODUCT_VISION.md  RELEASE_PLAN.md  ROADMAP.md  SAFETY_MODEL.md  UI_SYSTEM.md  WIESEL_MINI.md
hardware/wiesel-mini/: parts-list.md  wiring.md
hardware/wiesel-mini/firmware/: esp32_wiesel_mini.ino
qml/: Main.qml  Main_original.qml  TestWindow.qml
qml/components/: AppIcon.qml  CameraMapPanel.qml  CancelButton.qml  CommandPanel.qml  ConfirmButton.qml  ConfirmModal.qml  DangerButton.qml  DiagnosticsModal.qml  DisabledButton.qml  Gauge.qml  IndustrialButton.qml  LogConsole.qml  PrimaryButton.qml  ReadyButton.qml  RobotHealthPanel.qml  RocketButton.qml  RocketButtonGallery.qml  RocketDangerButton.qml  RocketDialogButton.qml  RocketFooter.qml  RocketIconButton.qml  RocketLogRow.qml  RocketMetricRow.qml  RocketPanel.qml  RocketProgressBar.qml  RocketSegmentedToggle.qml  RocketSidebarItem.qml  RocketStatusPill.qml  RocketTabButton.qml  RocketTopBar.qml  SecondaryButton.qml  SegmentedToggle.qml  StatusLight.qml  StatusPill.qml  TelemetryPanel.qml  ToolStatusCard.qml  TopRightMenu.qml  WarningButton.qml
scripts/linux/: bootstrap-ubuntu-24.04.sh  build.sh  run.sh
src/: RobotCommandInterface.cpp  RobotCommandInterface.h  RobotController.cpp  RobotController.h  TelemetryModel.cpp  TelemetryModel.h  VoiceSynthesisService.cpp  VoiceSynthesisService.h  VoiceTranscriptionService.cpp  VoiceTranscriptionService.h
